# holikeyz

./: .gitignore  Cargo.toml  ENHANCED_FEATURES.md  LICENSE  Makefile  PROVISIONING.md  PROVISIONING_GUIDE.md  README.md  SETUP_GUIDE.md  build.sh  config.toml.example  demo-enhanced.sh  detect-elgato.sh  generate-scene-images.sh  install-enhanced.sh  install-gnome-extension.sh  install.sh  monitor-elgato.sh  provision-elgato.sh  provision-safe.sh  provision-simple.sh  provision_elgato.py  test-dbus.sh  test-enhanced-features.sh  test-enhanced.sh  test-latency.sh  test-provision.sh  test-provisioning.sh
dbus/: com.elgato.RingLight.service  com.holikeyz.RingLight.service
examples/: provisioning_client.rs
gnome-extension/elgato-ring-light@example.com/: extension.js  metadata.json  stylesheet.css
gnome-extension/holikeyz-ring-light@example.com/: extension-enhanced.js  extension-legacy.js  extension-merged.js  extension-modern.js  extension-new.js  extension.js  metadata.json
kde-plasmoid/: install.sh
kde-plasmoid/holikeyz-ring-light/: metadata.json
kde-plasmoid/holikeyz-ring-light/contents/config/: main.xml
kde-plasmoid/holikeyz-ring-light/contents/ui/: CompactRepresentation.qml  FullRepresentation.qml  SceneCard.qml  configGeneral.qml  main.qml
models/flux-schnell/: README.md
src/: api.rs  config.rs  discovery.rs  error.rs  lib.rs  main.rs  models.rs
src/provisioning/: api.rs  credential_manager.rs  device_provisioner.rs  elgato.rs  elgato_fixed.rs  elgato_web.rs  enhanced_manager.rs  mod.rs  security.rs  soft_ap.rs  wifi_manager.rs
systemd/: elgato-ring-light.service  holikeyz-ring-light.service
