[package]
name = "elgato-controller"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Cross-platform Elgato Ring Light controller with GNOME integration"
license = "MIT"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
mdns-sd = "0.11"
dbus = "0.9"
dbus-crossroads = "0.5"
dbus-tokio = "0.7"

[lib]
name = "elgato_controller"
path = "src/lib.rs"

[[bin]]
name = "elgato-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "elgato-dbus-service"
path = "src/bin/dbus_service.rs"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
